Revert "Bug #55129. FrontEnd: TestScripts: markup (mostly css) fix. Zoom does not break the page as much anymore."
This reverts commit 63caf1bf1cf5aaae86752e29f9ec9b0bf5f20a7b.

(cherry picked from commit 3e752342a7e6f3e7fa90ebd1362588603e845b39)

--- a/FrontEnd/SailfishFrontEnd/WebContent/resources/sf/css/scriptruns.css
+++ b/FrontEnd/SailfishFrontEnd/WebContent/resources/sf/css/scriptruns.css
@@ -3,12 +3,12 @@
 	vertical-align: middle;
 }
 
-.eps-container {
-    height: calc(100% - 84px);
-}
-
 .eps-application .ui-fileupload-content {
     display: none;
+}
+
+.eps-container {
+	min-height: 230px;
 }
 
 .eps-table-wrapper {
@@ -18,20 +18,29 @@
 }
 
 .eps-matrices-wrapper {
-    display: inline-block;
-    box-sizing: border-box;
-    width: 50%;
+	box-sizing: border-box;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 50%;
 }
 
 .eps-global-result-wrapper {
-    display: inline-block;
-    box-sizing: border-box;
-    border-left: 1px solid #cdcdcd;
-    width: 50%;
+	box-sizing: border-box;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	width: 50%;
+	border-left: 1px solid #cdcdcd;
 }
 
 .eps-results-filter {
     display: none;
+    position: absolute;
+    top: 56px;
+    left: 360px;
     background: white;
 	border: 1px solid #cdcdcd;
     z-index: 1002;
@@ -46,6 +55,9 @@
 	left: 15px;
 	border: solid transparent;
 	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
 	pointer-events: none;
 }
 
@@ -114,11 +126,13 @@
 }
 
 .eps-test-script-results-wrapper {
-	overflow-y: overlay;
-	overflow-x: scroll;
+	position: absolute;
+	top: 60px;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	overflow: auto;
 	border-top: 1px solid #cdcdcd;
-	flex-shrink: 1;
-	flex-grow: 1;
 }
 
 ::-webkit-scrollbar {
@@ -136,19 +150,14 @@
 .eps-scriptruns-form {
 	height: 100%;
 	text-align: left;
-	display: flex;
-	flex-direction: column;
-}
-
-.eps-panel-container {
-    display: flex;
-    height: 100%;
 }
 
 .eps-scripts-toolbar {
+	width: 76%;
 	display: inline-block;
+	margin: 7.5px 8px;
 	box-sizing: border-box;
-	flex-grow: 1;
+	float: left;
 }
 
 .eps-scriptruns-form .eps-scripts-toolbar > ul > li {
@@ -164,16 +173,11 @@
 	display: none;
 }
 
-.eps-left-panel-menu-bar-container {
-    display: flex;
-    margin: 5px;
-    height: 45px;
-    flex-grow: 0;
-    flex-shrink: 0;
-}
-
 .eps-scriptruns-sub-toolbar {
+	width: auto;
 	display: inline-block;
+	float:  right;
+	margin: 7.5px 8px 7.5px 4px;
 	box-sizing: border-box;
 }
 
@@ -183,9 +187,14 @@
 }
 
 .eps-matrix-list-table {
+	position: absolute;
+	top: 60px;
+    bottom: 55px;
+	left: 0;
+	right: 0;
 	box-sizing: border-box;
-	height: calc(100% - 55px);
-	min-height: 0;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .eps-matrix-list-table.eps-statistics-enabled {
@@ -193,21 +202,27 @@
 }
 
 .eps-matrix-list-table.eps-main-table thead {
-    height: 35px
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: -0.5px;
 }
 
 .eps-matrix-list-table.eps-main-table tbody {
-    display: block;
+	position: absolute;
+	top: 35px;
+    bottom: 15px;
+	left: 0;
+	right: 0;
 	overflow-y: auto;
 	overflow-x: hidden;
-	height: calc(100% - 35px);
-}
-
-.eps-matrix-list-table.eps-main-table .ui-datatable-tablewrapper {
-    height: calc(100% - 24px);
 }
 
 .eps-matrix-list-table.eps-main-table .ui-datatable-footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	height: 15px;
 	color: #222222;
 }
@@ -318,19 +333,29 @@
 }
 
 .eps-matrices-footer {
-    display: flex;
-    flex-wrap: wrap;
-    box-sizing: border-box;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	/*border-top: 1px solid #e0e0e0;*/
+	padding-top: 5px;
+	padding-bottom: 5px;
+	box-sizing: border-box;
 }
 
 .eps-left-footer {
-    margin: 3px;
-    flex-shrink: 0;
-    flex-grow: 1;
+	width: auto;
+	float: left;
+	margin-left: 10px;
+	margin-top: 8px;
 }
 
 .eps-right-footer {
-    margin: 3px;
+	width: auto;
+	float: right;
+	margin-left: 10px;
+	margin-top: 5px;
+	margin-bottom: 0px;
 }
 
 .eps-scriptruns-form .eps-scriptruns-toolbar {
@@ -343,6 +368,7 @@
 
 .eps-scriptruns-form .eps-scriptrun-select-all {
     display: inline-block;
+	float: right;
 }
 
 .eps-result-block {
@@ -831,6 +857,27 @@
     top: 45px;
 }
 
+/*custom checkboxes fixes*/
+@media (max-width: 1207px) {
+
+	.eps-checkbox-wrapper{
+		display: block;
+	}
+
+	.eps-left-footer {
+		margin-top: 17px;
+	}
+
+	.eps-right-footer {
+	    margin-top: 25px;
+	}
+
+	.eps-matrix-list-table.eps-main-table tbody {
+	    bottom: 30px;
+	}
+}
+
+
 /*hide text at top-right menu*/
 @media (max-width: 1465px) {
 
@@ -992,11 +1039,10 @@
 }
 
 .eps-test-script-result-toolbar-container {
-    margin: 5px;
-    height: 45px;
+    padding-left: 12px;
+    padding-right: 30px;
+    padding-top: 6px;
     display:flex;
-    flex-shrink: 0;
-    flex-grow: 0;
 }
 
 .eps-test-script-result-toolbar-buttons-left-container {
@@ -1011,7 +1057,6 @@
     flex-wrap: nowrap;
     flex-flow: row-reverse;
     margin-left: auto;
-    margin-right: 25px;
 }
 
 .eps-test-script-result-toolbar-buttons-middle-container {
